provisioning/apps/overlays/k3d-example/whoami/ingress-local-ip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-local-ip
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: op-keycloak-traefik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: whoami.10.10.10.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-svc
            port:
              number: 80
